Add Report index

--- a/WebContent/css /style.css
+++ b/WebContent/css /style.css
@@ -23,8 +23,6 @@ h1 {
     display: inline;
 }
 
-}
-
 h2 {
     font-size: 36px;
     margin-bottom: 15px;
@@ -135,4 +133,24 @@ select {
 
 h1 a {
     color: #eeeeee;
+}
+table#report_list th {
+    font-weight: bold;
+    padding: 10px 2%;
+}
+
+table#report_list .report_name {
+    width: 20%;
+    padding: 10px 2%;
+}
+table#report_list .report_date {
+    width: 20%;
+}
+
+table#report_list .report_title {
+    width: 37%;
+}
+
+table#report_list .report_action {
+    width: 13%;
 }
